Fix bug on second touch on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400&display=swap');
+
+.silkscreen-regular {
+  font-family: "Silkscreen", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 @keyframes heart-bump {
   0% {
     transform: scale(1);
@@ -58,8 +66,9 @@
 
 .Question {
   color: white;
-  font-size: 24px;
-  margin-top: 20px;
+  font-size: 2rem;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
   font-weight: bold;
 }
 
